--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ category-encoders==2.1.0
 certifi==2020.4.5.2
 chardet==3.0.4
 click==6.7
-#cython==0.29.10
+cython==0.29.10
 distlib==0.3.1
 filelock==3.0.12
 Flask==1.1.1
