--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ itsdangerous==0.24
 Jinja2==2.10.3
 joblib==0.13.2
 kaggle==1.5.6
+setuptools==45
 MarkupSafe==1.0
 marshmallow==3.7.1
 more-itertools==8.4.0
