--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,8 @@ distlib==0.3.1
 filelock==3.0.12
 Flask==1.1.1
 flask-swagger-ui==3.20.9
-# gspread==3.1.0
-# gspread-dataframe==3.0.3
+gspread==3.1.0
+gspread-dataframe==3.0.3
 httplib2==0.18.1
 idna==2.9
 importlib-metadata==1.6.1
