--- a/requirements.txt
+++ b/requirements.txt
@@ -46,7 +46,7 @@ pytz==2019.1
 requests==2.23.0
 rsa==4.6
 scikit-learn==0.22
-scipy==1.3.0
+#scipy==1.3.0
 sendgrid==6.1.0
 simple-salesforce==0.74.3
 six==1.15.0
