--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - run:
           name: install dependencies
           command: |
-            pip3 install category-encoders==2.1.0 cython==0.29.10 --install-option="--no-cython-compile" distlib==0.3.1 Flask==1.1.1
+            pip3 install category-encoders==2.1.0 
       # Step 3: run linter and tests
       - run:
           name: run tests
