--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,4 +19,4 @@ jobs:
       - run:
           name: run tests
           command: |
-            pytest MachineLearning/tests/test_controller.py
+            pytest tests/test_controller.py
