--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - run:
           name: install dependencies
           command: |
-            pip3 install category-encoders==2.1.0 pytest flask
+            pip3 install category-encoders==2.1.0 pytest flask xgboost==0.90
       # Step 3: run linter and tests
       - run:
           name: run tests
