--- a/model_package/MANIFEST.in
+++ b/model_package/MANIFEST.in
@@ -3,8 +3,10 @@ recursive-include ./model_package/*
 include ../tests/*
 include ../preprocessors/*
 include ../pickle_jar/*
+# include ../config/*
 
 exclude ../logs
 
 global-exclude * __pycache__
 global-exclude * *.py[co]
+global-exclude * *.ipynb_checkpoints
