--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - run:
           name: install dependencies
           command: |
-            pip3 install -r requirements.txt
+            pip3 install -e model_package -r requirements.txt
       # Step 3: run linter and tests
       - run:
           name: run tests
