--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,8 @@ category-encoders==2.1.0 #Root directory requirements
 pytest 
 flask 
 xgboost==0.90
+gunicorn==20.0.4
+Wekzeug==0.16.0
+Jinja2==2.10.1
+itsdangerous==1.1.0
+MarkupSafe==1.1.1
