--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,182 @@
-category-encoders==2.1.0 
-pytest 
-flask 
-xgboost==0.90
-gunicorn==20.0.4
-Werkzeug==0.16.0
-Jinja2==2.10.1
+appdirs==1.4.4
+appnope==0.1.0
+astroid==2.3.3
+atomicwrites==1.3.0
+attrs==19.3.0
+autopep8==1.5.2
+azure-common==1.1.25
+azure-core==1.6.0
+azure-storage-blob==12.3.1
+azure-storage-common==2.1.0
+backcall==0.1.0
+backoff==1.10.0
+bleach==3.1.0
+cached-property==1.5.1
+cachetools==4.2.2
+category-encoders==2.1.0
+certifi==2019.11.28
+cffi==1.13.2
+chardet==3.0.4
+Click==7.0
+cryptography==2.8
+cycler==0.10.0
+Cython==0.29.14
+dask==2.12.0
+decorator==4.4.1
+defusedxml==0.6.0
+dill==0.3.1.1
+entrypoints==0.3
+et-xmlfile==1.0.1
+exception==0.1.0
+fastparquet==0.3.3
+filelock==3.0.12
+findspark==1.3.0
+Flask==1.1.1
+Flask-Simple-GeoIP==0.1.1
+flask-swagger-ui==3.20.9
+Flask-Track-Usage==2.0.0
+google-api-core==1.26.3
+google-api-python-client==2.5.0
+google-auth==1.30.0
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==0.4.4
+googleapis-common-protos==1.53.0
+graphviz==0.13.2
+gspread==3.2.0
+gspread-dataframe==3.0.3
+httplib2==0.17.0
+idna==2.8
+imbalanced-learn==0.6.2
+imblearn==0.0
+importlib-metadata==1.4.0
+ipykernel==5.1.3
+-e git+https://github.com/matplotlib/ipympl.git@bd477f537464a3cc7e3196cb820a8531d97c7f97#egg=ipympl
+ipython==7.11.1
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+isodate==0.6.0
+isort==4.3.21
 itsdangerous==1.1.0
+jdcal==1.4.1
+jedi==0.15.2
+Jinja2==2.10.3
+joblib==0.14.1
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==5.3.4
+jupyter-console==6.1.0
+jupyter-core==4.6.1
+jupyternotify==0.1.15
+kiwisolver==1.1.0
+lazy-object-proxy==1.4.3
+llvmlite==0.31.0
+lxml==4.5.2
 MarkupSafe==1.1.1
+matplotlib==3.1.2
+mccabe==0.6.1
+mistune==0.8.4
+mlxtend==0.17.2
+more-itertools==8.1.0
+msrest==0.6.15
+nbconvert==5.6.1
+nbformat==5.0.4
+nodejs==0.1.1
+notebook==6.0.3
+npm==0.1.1
+numba==0.48.0
+numpy==1.18.1
+oauth2client==4.1.3
+oauthlib==3.1.0
+objgraph==3.4.1
+opencv-contrib-python==4.2.0.32
+openpyxl==3.0.3
+optional-django==0.1.0
+packaging==20.0
+pandas==0.24.2
+pandas-datareader==0.9.0
+pandocfilters==1.4.2
+parso==0.5.2
+patsy==0.5.1
+pbr==5.4.4
+pexpect==4.7.0
+phonenumbers==8.12.2
+pickleshare==0.7.5
+pluggy==0.13.1
+pmdarima==1.5.2
+prometheus-client==0.7.1
+prompt-toolkit==3.0.2
+protobuf==3.16.0
+psycopg2==2.8.4
+psycopg2-binary==2.8.2
+ptyprocess==0.6.0
+py==1.8.1
+py4j==0.10.9
+pyarrow==0.16.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.6.0
+pycparser==2.19
+PyDrive==1.3.1
+Pygments==2.5.2
+PyJWT==1.7.1
+pylint==2.4.4
+pymssql==2.1.4
+PyMySQL==0.9.3
+pyodbc==4.0.26
+pyOpenSSL==19.1.0
+pyparsing==2.4.6
+PyPika==0.35.21
+pyrasite==2.0
+pyreadline==2.1
+pyrsistent==0.15.7
+pyspark-dist-explore==0.1.8
+pytest==5.2.2
+pytest-mock==1.11.2
+python-dateutil==2.8.1
+python-http-client==3.2.4
+pytz==2019.3
+PyYAML==5.4.1
+pyzmq==18.1.1
+qtconsole==4.6.0
+regex==2020.11.13
+requests==2.22.0
+requests-oauthlib==1.3.0
+requests-toolbelt==0.9.1
+rsa==4.0
+scikit-learn==0.22.1
+scipy==1.4.1
+seaborn==0.9.0
+section==2.0
+Send2Trash==1.5.0
+sendgrid==6.1.0
+simple-geoip==0.1.0
+simple-salesforce==0.74.3
+six==1.14.0
+sklearn==0.0
+SQLAlchemy==1.3.3
+statsmodels==0.11.0
+stevedore==1.31.0
+stringcase==1.2.0
+terminado==0.8.3
+testpath==0.4.4
+thrift==0.13.0
+toml==0.10.1
+tornado==6.0.3
+tox==3.17.0
+traitlets==4.3.3
+twilio==6.40.0
+typed-ast==1.4.1
+uritemplate==3.0.1
+urllib3==1.25.8
+virtualenv==16.7.9
+virtualenv-clone==0.5.3
+virtualenvwrapper==4.8.4
+wcwidth==0.1.8
+webencodings==0.5.1
+Werkzeug==0.16.0
+widgetsnbextension==3.5.1
+wrapt==1.11.2
+xgboost==0.90
+xlrd==1.2.0
+zeep==3.4.0
+zipp==1.0.0
