--- a/.github/workflows/master_titanic-model.yml
+++ b/.github/workflows/master_titanic-model.yml
@@ -7,7 +7,7 @@ name: Build and deploy Python app to Azure Web App - titanic-model
 on:
   push:
     branches:
-      - master
+      - master_branch_azure
   workflow_dispatch:
 
 jobs:
